--- a/JupyterWorkflow.ipynb
+++ b/JupyterWorkflow.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# My Jupyter Workflow for basic analysis\n",
+    "## Author: Jorge Anicama"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
