--- a/JupyterWorkflow.ipynb
+++ b/JupyterWorkflow.ipynb
@@ -14,27 +14,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "from urllib.request import urlretrieve\n",
-    "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
-    "import os\n",
-    "\n",
     "plt.style.use('seaborn')\n",
     "\n",
-    "# Get the DATA into local filesystem\n",
-    "# https://data.seattle.gov/Transportation/Fremont-Bridge-Hourly-Bicycle-Counts-by-Month-Octo/65db-xm6k\n",
-    "URL = 'https://data.seattle.gov/api/views/65db-xm6k/rows.csv?accessType=DOWNLOAD'\n",
-    "\n",
-    "def get_myFreemontData(url=URL, filename='mycsv.csv'):\n",
-    "    if not os.path.exists(filename):\n",
-    "        urlretrieve(url, filename)\n",
-    "    data = pd.read_csv('mycsv.csv', index_col='Date', parse_dates=True)\n",
-    "    # Add columns shorter header\n",
-    "    data.columns=['West','East']\n",
-    "    # Add a Total column\n",
-    "    data['Total'] = data['West']+data['East']\n",
-    "    return data\n"
+    "from myPKG.myLib import get_myFreemontData"
    ]
   },
   {
@@ -159,7 +142,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fc8c6144fd0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f8d07181da0>"
       ]
      },
      "execution_count": 4,
@@ -223,7 +206,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fc8c5efeef0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f8d06f63208>"
       ]
      },
      "execution_count": 6,
@@ -350,7 +333,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fc8c5e63080>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f8d06da2dd8>"
       ]
      },
      "execution_count": 8,
@@ -373,13 +356,6 @@
     "# alpha transparency to visualize all graphs\n",
     "pivoted.plot(legend=False, alpha=0.1)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
